ajouter détails interfaces

--- a/front/src/app/admin/stage/stage.component.html
+++ b/front/src/app/admin/stage/stage.component.html
@@ -31,8 +31,8 @@
                 <td>{{stage.entreprise?.no_entreprise}}</td>
                 <td>{{stage.type?.code_type}}</td>
                 <td>{{stage.annee_stage}}</td>
-                <td *ngIf="stage.compte_rendu_stage != null">{{stage.compte_rendu_stage}}</td>
-                <td *ngIf="stage.compte_rendu_stage == null">Bientot disponible</td>
+                <td *ngIf="stage.compte_rendu_stage != null && stage.compte_rendu_stage != ''">{{stage.compte_rendu_stage}}</td>
+                <td *ngIf="stage.compte_rendu_stage == null || stage.compte_rendu_stage == ''">Bientôt disponible</td>
                 <td id="actions">
                   <mat-icon (click)="modifierStage(stage)">save</mat-icon>
                   <mat-icon (click)="supprimerStage(stage.no_stage)">delete</mat-icon>
