--- a/front/src/app/admin/type/type.component.html
+++ b/front/src/app/admin/type/type.component.html
@@ -1,5 +1,5 @@
 <div class="type">
-  <p>Consulter la liste des types de stages disponibles.</p>
+  <p>Consulter la liste des types associés stages.</p>
   <div class="liste">
       <table class="table table-striped">
           <thead>
